# mortalidad-colombia-2019

./: .gitignore  README.md  RENDER-DEPLOY.md  app.py  pyproject.toml  requirements.txt
assets/: style.css
data/processed/: deaths_enriched.parquet  departments.parquet  summary.json
docs/: README.md
scripts/: build_processed.py  inventory.py
src/data/: age_groups.py  constants.py  loader.py  transformer.py
src/layout/: header.py  main.py
src/viz/: bar_violent_cities.py  histogram_age.py  line_monthly.py  map_departments.py  pie_low_mortality.py  stacked_sex_dept.py  table_causes.py  theme.py
