[project]
name = "mortalidad-colombia-2019"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dash>=4.1.0",
    "gunicorn>=26.0.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
]

[tool.pyright]
include = ["src", "scripts", "app.py"]
extraPaths = ["."]
pythonVersion = "3.11"
reportMissingImports = "none"
reportAttributeAccessIssue = "none"
reportCallIssue = "none"
reportArgumentType = "none"
reportReturnType = "none"
